[gd_scene load_steps=2 format=1]

[ext_resource path="res://code/ui/TimeControl.gd" type="Script" id=1]

[node name="TimeControl" type="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 80.0
script/script = ExtResource( 1 )
speed_change_step = 2.0

[node name="container" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 153.0
margin/bottom = 73.0
alignment = 0

[node name="time" type="Label" parent="container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 146.0
margin/bottom = 14.0
text = "yyy.mm.dd - hh:mm"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="container" type="HBoxContainer" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 146.0
margin/bottom = 42.0
alignment = 0

[node name="play" type="Button" parent="container/container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 20.0
margin/bottom = 24.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = ">"
flat = false

[node name="slower" type="Button" parent="container/container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "["
flat = false

[node name="speed" type="LineEdit" parent="container/container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 44.0
margin/top = 0.0
margin/right = 102.0
margin/bottom = 24.0
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="faster" type="Button" parent="container/container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 0.0
margin/right = 122.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "]"
flat = false

[connection signal="toggled" from="container/container/play" to="." method="toggle_play"]

[connection signal="pressed" from="container/container/slower" to="." method="slower_speed"]

[connection signal="pressed" from="container/container/faster" to="." method="faster_speed"]


